# edinburgh

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yaml
__frame-forwarder/src/: edi.rs
__ref__src/: edi.rs  main.rs  stdin_main.rs  utils.rs
cli/: Cargo.toml  Makefile
cli/__ref/: __audio.rs  __cp__sync__main.rs  __messed__msc.rs  audio.rs  edi.rs  utils.rs
cli/src/: __app__main.rs  __async__broken__main.rs  audio.rs  dec.rs  edi.rs  edi_frame_extractor.rs  main.rs  main_sync.rs  sls.rs  tui.rs
cli/src/edi/: bus.rs  ensemble.rs  frame.rs  mod.rs  msc.rs
cli/src/tui/: meter.rs  mod.rs  notes.md  sls.rs  term_guard.rs
demo/: Makefile  README.md
demo/docker/: Dockerfile  nginx.conf  start.sh
devsupport/: README.md  compose.yml
devsupport/encoder/: Dockerfile  supervisor.conf
devsupport/encoder/ls/: encoder.liq
devsupport/encoder/run/enc-1/: dls.txt
devsupport/encoder/run/enc-1/sls/: s1.jpg.sls_params
devsupport/encoder/supervisor.d/: enc-001.conf  enc-002.conf  enc-003.conf  enc-004.conf
devsupport/mux/: Dockerfile  odr-dabmux.json  start.sh
docs/: index.md
ensemble-directory/: Cargo.toml  README.md  directory.yaml
ensemble-directory/src/: edi_frame_extractor.rs  main.rs  services.rs  services_bus_based_and_not_working.rs
faad2-local/: .cargo_vcs_info.json  Cargo.toml
faad2-local/src/: lib.rs
frame-forwarder/: Cargo.toml  Makefile  README.md
frame-forwarder/src/: edi_frame_extractor.rs  main.rs
frontend/: .gitignore  index.html  package.json  vite.config.js
frontend/public/: pcm-processor.js
frontend/src/: App.svelte  __MP4Box__App.svelte  __PCM__App.svelte
python/: Cargo.toml  README.md  example.py  pyproject.toml
python/src/: lib.rs
shared/: Cargo.toml  README.md
shared/src/: dab.rs  edi.rs  edi_frame_extractor.rs  lib.rs  meter.rs  utils.rs
shared/src/dab/: bus.rs  ensemble.rs  fic.rs  frame.rs  msc.rs  pad.rs  tables.rs  utils.rs
shared/src/dab/pad/: dl.rs  mot.rs
shared/src/edi/: __ensemble.rs  __fic.rs  bus.rs  dl.rs  ensemble.rs  fic.rs  frame.rs  mod.rs  msc.rs  pad.rs  rs_decoder.rs  tables.rs
shared/src/edi/pad/: dl.rs  mod.rs  mot.rs
src/: __ref__main.rs  audio.rs  dec.rs  edi.rs  fic.rs  main.rs  tcp_main.rs  utils.rs
tools/: edinburgh-locate.py
wasm/: .gitignore  Cargo.toml  Makefile  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
wasm/devsupport/: ws-proxy.py  ws-proxy.rs
wasm/src/: lib.rs
wasm/src/edi/: bus.rs  ensemble.rs  mod.rs  msc.rs
wasm/ui/: .oxlintignore  App.vue  eslint.config.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
wasm/ui/assets/: main.css
wasm/ui/components/: Ensemble.vue  Service.vue
wasm/ui/public/: faad2.wasm  pcm-processor.js
wasm/ui/src/: App.vue  main.ts
wasm/ui/src/assets/: main.css
wasm/ui/src/components/__icons/: IconPause.vue
wasm/ui/src/components/dev/: CodecSupport.vue
wasm/ui/src/components/directory/: EnsembleTable.vue
wasm/ui/src/components/edi/connection/: Connection.vue  Scanner.vue
wasm/ui/src/components/edi/ensemble/: Ensemble.vue  EnsembleTable.vue  ServiceTable.vue
wasm/ui/src/components/edi/service-detail/: Service.vue
wasm/ui/src/components/edi/service-list/: Service.vue  Services.vue
wasm/ui/src/components/icons/: IconPause.vue  IconPlay.vue  IconStop.vue
wasm/ui/src/components/meter/: LevelMeter.vue
wasm/ui/src/components/ui/: Button.vue  HexValue.vue  Input.vue  Panel.vue
wasm/ui/src/decoder/: __faad2.ts  faad2.ts
wasm/ui/src/lib/: decoder.js  faad2.js
wasm/ui/src/stores/: edi.ts  player.ts
wasm/ui/src/style/: main.css
wasm/ui/src/style/lib/: _reset-alt.css
wasm/ui/src/types/: index.d.ts
web-ui/: Makefile  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
web-ui/public/: pcm-processor.js
web-ui/src/: App.vue  main.ts  settings.ts
web-ui/src/components/browser/: BrowserSupport.vue
web-ui/src/components/dev/: CodecSupport.vue
web-ui/src/components/directory/: EnsembleDiscovery.vue  EnsembleTable.vue
web-ui/src/components/edi/connection/: Connection.vue
web-ui/src/components/edi/ensemble/: Ensemble.vue  ServiceTable.vue
web-ui/src/components/edi/service-detail/: DlPlusDisplay.vue  Service.vue  Subchannel.vue
web-ui/src/components/edi/service-list/: Service.vue  Services.vue
web-ui/src/components/edi/settings/: Settings.vue
web-ui/src/components/footer/: Footer.vue
web-ui/src/components/icons/: IconLink.vue  IconPause.vue  IconPlay.vue  IconTheme.vue
web-ui/src/components/meter/: LevelMeter.vue
web-ui/src/components/settings/: Settings.vue
web-ui/src/components/ui/: Button.vue  HexValue.vue  Input.vue  Panel.vue
web-ui/src/composables/: browser.ts
web-ui/src/decoder/: faad2.ts
web-ui/src/lib/: faad2.js  faad2_wasm.mjs  faad2_wasm.wasm
web-ui/src/stores/: edi.ts
web-ui/src/style/: main.scss
web-ui/src/style/lib/: _fonts.css
web-ui/src/types/: faad2-wasm.d.ts  index.d.ts
