[package]
name = "edinburgh"
version = "0.0.1"
edition = "2021"
default-run = "edinburgh"

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5.32", features = ["derive"] }
colog = "1.3.0"
derivative = "2.2.0"
env_logger = "0.11.7"
# faad2 = "0.1.0"
faad2 = { path = "../../../rs/faad2-rs" }
#fdk-aac-sys = "0.5.0"
futures = "0.3.31"
log = "0.4.26"
rodio = "0.20.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "time", "sync"] }
ratatui = { version = "0.29.0", features = ["palette", "scrolling-regions"] }
humansize = "2.1.3"

[[bin]]
name = "edinburgh"
path = "src/main.rs"
