[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative = "2.2.0"
thiserror = "2.0.12"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
md5 = "0.7.0"
serde_json = "1.0.140"
base64 = "0.22.1"
once_cell = "1.21.3"
futures = "0.3.31"


[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3.31"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
