[package]
name = "edinburgh-wasm"
version = "0.0.1"
authors = ["Jonas Ohrstrom <ohrstrom@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# wasm-bindgen = "0.2.84"
wasm-bindgen = { version = "0.2.84", features = ["serde"] }
wasm-bindgen-futures = "0.4.50"

serde = { version = "1.0.219", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

web-sys = { version = "0.3", features = ["console", "WebSocket", "MessageEvent", "BinaryType"] }
derivative = "2.2.0"
log = "0.4.26"
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
wee_alloc = "0.4.5"
thiserror = "2.0.12"
futures = "0.3.31"
console_log = { version = "1.0.0", features = ["color"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
