[package]
name = "edinburgh-wasm"
version = "0.0.1"
authors = ["Jonas Ohrstrom <ohrstrom@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
shared = { path = "../shared" }
wasm-bindgen = { version = "0.2.84", features = ["serde"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = ["console", "WebSocket", "MessageEvent", "BinaryType"] }

serde = { version = "1.0.219", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }

derivative = "2.2.0"
log = "0.4.26"
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0.12"
futures = "0.3.31"
console_log = { version = "1.0.0", features = ["color"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
